# MINS_LR

./: CMakeLists.txt  ExtendedBooking.h  entities.h  exceptions.h  main.cpp  repositories.h  services.h  ui.h  vcpkg.json
client/: ConsoleUI.h  main.cpp
patterns/observer/: Observer.h
patterns/state/: BookingState.h
patterns/strategy/: PricingStrategy.h
proto/: common.proto  core.proto  reference.proto
service_a/: BookingService.h  CoreServiceImpl.cpp  CoreServiceImpl.h  HotelReportManager.h  ReferenceClient.cpp  ReferenceClient.h  main.cpp  repositories.h
service_b/: ReferenceServiceImpl.cpp  ReferenceServiceImpl.h  main.cpp  repositories.h
services/: BookingService.h  HotelReportManager.h
shared/: grpc_logging.h  trace.h
ui/: ConsoleUI.h
